# skystore

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile.skystore  README.md  juicefs_proxy_local_output  measure.txt  output2  proxy_output  pyproject.toml  send.py  server_output  skystore_cli.py
.github/workflows/: python.yml  rust.yml
config/: register_config.json  register_config2.json
s3-proxy/: Cargo.toml  justfile  measure.txt
s3-proxy/src/: main.rs  objstore_client.rs  skyproxy.rs  skyproxy_test.rs  stream_utils.rs  type_utils.rs
s3-proxy/src/client_impls/: azure.rs  gcp.rs  s3.rs
s3-proxy/src/utils/: stream_utils.rs  type_utils.rs
s3-proxy/test/: init_config.json  init_config2.json  init_config3.json  register_config.json  register_config2.json  register_config3.json  register_config4.json
scripts/: pack_docker_skystore.sh  requirements-skystore-gateway.txt
skyplane/api/: obj_store.py
skyplane/compute/: server.py
skyplane/compute/aws/: aws_auth.py  aws_cloud_provider.py
skyplane/obj_store/: s3_interface.py
skyplane/skystore/api/: skystore_client.py  skystore_dataplane.py  skystore_gateway_config.py  skystore_obj_store.py  skystore_server_client.py  skystore_server_config.py  skystore_server_dataplane.py
skyplane/skystore/gateway/: server_api.py  server_daemon.py
skyplane/skystore/test/: client_test.py  test_aws_client_server.py
skyplane/skystore/test/config/: create_dynamodb.py  delete_buckets.py  (+1 more)
skyplane/skystore/utils/: definitions.py
skystore-cli/: Cargo.toml
skystore-cli/src/: main.rs
store-server/: .gitignore  app.py  bucket_models.py  conf.py  justfile  object_models.py  requirements.txt  skystore.db-shm  test_app.py  test_version_app.py  uvicorn-logging.json
store-server/experiment/: client.py  host.py  issue_request.py
store-server/experiment/trace/: single_region.csv  small_test.csv  trace_output_new.csv  two_regions.csv
store-server/operations/: bucket_operations.py  object_operations.py
store-server/operations/policy/: placement_policy.py  transfer_policy.py
store-server/operations/schemas/: bucket_schemas.py  object_schemas.py
store-server/operations/utils/: conf.py  db.py
(+28 files in other folders)
